add configurable key binding for journal menu

--- a/l10n/quest_guider_lite/en.yaml
+++ b/l10n/quest_guider_lite/en.yaml
@@ -1,3 +1,6 @@
 empty: ""
 modName: "Quest Guider Lite"
 modDescription: "PH"
+journal: "Journal"
+customJournalKeyName: "Open Menu"
+customJournalKeyDescription: "Key to open menu"
