add font size setting to journal

--- a/l10n/quest_guider_lite/en.yaml
+++ b/l10n/quest_guider_lite/en.yaml
@@ -4,3 +4,4 @@ modDescription: "PH"
 journal: "Journal"
 customJournalKeyName: "Open Menu"
 customJournalKeyDescription: "Key to open menu"
+fontSize: "Font size"
