add menu width and height settings

--- a/l10n/quest_guider_lite/en.yaml
+++ b/l10n/quest_guider_lite/en.yaml
@@ -5,3 +5,7 @@ journal: "Journal"
 customJournalKeyName: "Open Menu"
 customJournalKeyDescription: "Key to open menu"
 fontSize: "Font size"
+width: "Width"
+height: "Height"
+widthDescription: "Width of the menu"
+heightDescription: "Height of the menu"
