add journal window position settings

--- a/l10n/quest_guider_lite/en.yaml
+++ b/l10n/quest_guider_lite/en.yaml
@@ -9,3 +9,6 @@ width: "Width"
 height: "Height"
 widthDescription: "Width of the menu"
 heightDescription: "Height of the menu"
+positionX: "Position X"
+positionY: "Position Y"
+journalWindowPositionNote: "You can just drag the window by the \"journal\" anchor."
