add quest list size setting

--- a/l10n/quest_guider_lite/en.yaml
+++ b/l10n/quest_guider_lite/en.yaml
@@ -12,3 +12,5 @@ heightDescription: "Height of the menu"
 positionX: "Position X"
 positionY: "Position Y"
 journalWindowPositionNote: "You can just drag the window by the \"journal\" anchor."
+questListRelativeSize: "Quest list size"
+questListRelativeSizeDescription: "Relative size of the list of quest names"
