add text color setting

--- a/l10n/quest_guider_lite/en.yaml
+++ b/l10n/quest_guider_lite/en.yaml
@@ -14,3 +14,5 @@ positionY: "Position Y"
 journalWindowPositionNote: "You can just drag the window by the \"journal\" anchor."
 questListRelativeSize: "Quest list size"
 questListRelativeSizeDescription: "Relative size of the list of quest names"
+textColor: "Text color"
+textColorSettingDescription: "Default is \"caa560\""
