add background color setting

--- a/l10n/quest_guider_lite/en.yaml
+++ b/l10n/quest_guider_lite/en.yaml
@@ -16,3 +16,5 @@ questListRelativeSize: "Quest list size"
 questListRelativeSizeDescription: "Relative size of the list of quest names"
 textColor: "Text color"
 textColorSettingDescription: "Default is \"caa560\""
+backgroudColor: "Background color"
+backgroudColorDescription: "Color for menu background. Requires restart."
