add UI color settings

--- a/l10n/quest_guider_lite/en.yaml
+++ b/l10n/quest_guider_lite/en.yaml
@@ -19,3 +19,11 @@ textColorSettingDescription: "Default is \"caa560\""
 backgroudColor: "Background color"
 backgroudColorDescription: "Color for menu background. Requires restart."
 UI: "UI"
+disabledColor: "Color of disabled elements"
+disabledColorDescription: "Default is \"7f7f7f\""
+dateColor: "Color for date"
+dateColorDescription: "Default is \"cc3333\""
+selectionColor: "Color for some selected elements"
+selectionColorDescription: "Default is \"33ff33\""
+shadowColor: "Text shadow color"
+shadowColorDescription: "Default is \"ffffff\""
