add scroll button setting

--- a/l10n/quest_guider_lite/en.yaml
+++ b/l10n/quest_guider_lite/en.yaml
@@ -27,3 +27,5 @@ selectionColor: "Color for some selected elements"
 selectionColorDescription: "Default is \"33ff33\""
 shadowColor: "Text shadow color"
 shadowColorDescription: "Default is \"ffffff\""
+scrollButtonSize: "Scroll button size"
+scrollButtonSizeDescription: "Size of buttons that scrolls lists"
