add tracking settings

--- a/l10n/quest_guider_lite/en.yaml
+++ b/l10n/quest_guider_lite/en.yaml
@@ -29,3 +29,8 @@ shadowColor: "Text shadow color"
 shadowColorDescription: "Default is \"ffffff\""
 scrollButtonSize: "Scroll button size"
 scrollButtonSizeDescription: "Size of buttons that scrolls lists"
+tracking: "Tracking"
+minDropchance: "Min dropchance to track"
+minDropchanceDescription: "Min dropchance for item in containers to start tracking the container"
+maxPositionNumberToNotTrackEntrances: "Object tracking limit for entrances"
+maxPositionNumberToNotTrackEntrancesDescription: "Sets the maximum number of tracked items in the game world before entrance markers are hidden. If the number of items exceeds this value, entrance markers will not be shown. However, markers inside interiors will still be displayed."
