add marker activation distance and auto-track options

--- a/l10n/quest_guider_lite/en.yaml
+++ b/l10n/quest_guider_lite/en.yaml
@@ -34,3 +34,11 @@ minDropchance: "Min dropchance to track"
 minDropchanceDescription: "Min dropchance for item in containers to start tracking the container"
 maxPositionNumberToNotTrackEntrances: "Object tracking limit for entrances"
 maxPositionNumberToNotTrackEntrancesDescription: "Sets the maximum number of tracked items in the game world before entrance markers are hidden. If the number of items exceeds this value, entrance markers will not be shown. However, markers inside interiors will still be displayed."
+autoTrack: "Auto track objects"
+autoTrackDescription: "Automatically track quest objects"
+trackDisabled: "Track disabled quests"
+trackDisabledDescription: "Allow to track disabled from the journal menu quests"
+markerActivationDistance: "Marker Activation Distance"
+markerActivationDistanceDescription: "Sets the distance at which markers for tracked objects become visible. Applies only to newly created markers."
+questGiverMarkerActivationDistance: "Marker Activation Distance for quest givers"
+questGiverMarkerActivationDistanceDescription: "Sets the distance at which markers for quest givers become visible. Applies only to newly created markers."
