add colored marker and quest flag options

--- a/l10n/quest_guider_lite/en.yaml
+++ b/l10n/quest_guider_lite/en.yaml
@@ -42,3 +42,7 @@ markerActivationDistance: "Marker Activation Distance"
 markerActivationDistanceDescription: "Sets the distance at which markers for tracked objects become visible. Applies only to newly created markers."
 questGiverMarkerActivationDistance: "Marker Activation Distance for quest givers"
 questGiverMarkerActivationDistanceDescription: "Sets the distance at which markers for quest givers become visible. Applies only to newly created markers."
+useColoredMarkers: "Colored markers"
+useColoredMarkersDescription: "When enabled, each tracked object is assigned a random color to help distinguish between them. Applies only to newly created."
+colorFlags: "Display color flags in quest list"
+colorFlagsDescription: "When enabled, colored flags appear before each quest name in the menu, matching the colors of the quest's tracked objects."
