localize requirement descriptions

--- a/l10n/quest_guider_lite/en.yaml
+++ b/l10n/quest_guider_lite/en.yaml
@@ -86,3 +86,115 @@ greater: "greater"
 greaterOrEqual: "greater or equal"
 less: "less"
 lessOrEqual: "less or equal"
+
+types.requirementType.CustomActor: "Talk to #objectName#"
+types.requirementType.CustomDialogue: "Dialogue topic \"#dialogueVariable#\""
+types.requirementType.Item: "The number of item \"#varName#\" (#variable#) is #operator# #value# for #objectName#"
+types.requirementType.CustomDisposition: "Disposition of the actor is #operator# #value#"
+types.requirementType.PreviousDialogChoice: "#value# dialogue option is selected"
+types.requirementType.CustomPCFaction: "The player in #valueName# faction"
+types.requirementType.Dead: "The number of deaths #varName# (#variable#) is #operator# #value#"
+types.requirementType.CustomActorCell: "Find the actor in #valueName#"
+types.requirementType.NotActorID: "The actor is#negNotContr# #varName#"
+types.requirementType.CustomPCRank: "#rankName# rank for #varName#"
+types.requirementType.CustomActorGender: "Someone's gender is #operator# #maleFemaleValue#"
+types.requirementType.PlayerLevel: "Player level is #operator# #value#"
+types.requirementType.CustomActorFaction: "The NPC in #valueName# faction"
+types.requirementType.NotActorRace: "Race of #objectName# is#negNotContr# #variable#"
+types.requirementType.Journal: "Stage of \"#varQuestName#\" (#variable#) quest is #operator# #value#"
+types.requirementType.CustomLocal: "Local variable #variable# for #objectName# is #operator# #value#"
+types.requirementType.CustomCurrentAIPackage: "Actor is performing an AI action"
+types.requirementType.CustomGlobal: "Global variable #variable# is #operator# #value#"
+types.requirementType.CustomDistance: "Distance to #varName# is #operator# #value#"
+types.requirementType.CustomActorClass: "The NPC's class is #operator# #classVal#"
+types.requirementType.NPCSameFactionAsPlayer: "#objectName# faction is#notContr# equal player's faction"
+types.requirementType.NPCTalkedToPlayer: "#objectName# talked to the player #isBeforeValue#"
+types.requirementType.CustomSkill: "#skillName# of #objectName# is #operator# #value#"
+types.requirementType.PlayerGender: "The player's gender is #operator# #maleFemaleValue#"
+types.requirementType.CustomAIPackageDone: "AI action of #objectName# is#notContr# done"
+types.requirementType.NPCSameGenderAsPlayer: "#objectName# has#notContr# same gender as the player"
+types.requirementType.CustomAttribute: "#attributeName# of #objectName# is #operator# #value#"
+types.requirementType.PlayerReputation: "Player's reputation is #operator# #value#"
+types.requirementType.RankRequirement: "#objectName# has #rankName# rank in #varName#"
+types.requirementType.PlayerIsVampire: "The player is#notContr# a vampire"
+types.requirementType.NPCIsAlarmed: "#objectName# is#notContr# alarmed"
+types.requirementType.NPCAttacked: "#objectName# is#notContr# attacked"
+types.requirementType.PlayerIsDetected: "The player is#notContr# detected"
+types.requirementType.CustomPCSleep: "The player is#notContr# asleep"
+types.requirementType.PlayerBlightDisease: "The player is#notContr# sick with a blight disease"
+types.requirementType.CustomDisabled: "Disabled state of the object is #operator# #trueFalseValue#"
+types.requirementType.CustomOnPCAdd: "The item was#notContr# added"
+types.requirementType.NPCReputation: "Reputation of #objectName# is #operator# #value#"
+types.requirementType.PlayerClothingModifier: "The value of items equipped on #objectName# is #operator# #value#"
+types.requirementType.PlayerHealth: "Health of #objectName# is #operator# #value#"
+types.requirementType.CustomBlightDisease: "The actor is#notContr# sick with a blight disease"
+types.requirementType.NPCSameRaceAsPlayer: "The NPC has#notContr# the same race as the player"
+types.requirementType.CustomWeaponDrawn: "Weapon of #objNameOrTheActor# is#notContr# drawn"
+types.requirementType.CustomNotLocal: "The object has#negNotContr# attached \"#variable#\" local variable"
+types.requirementType.PlayerRankMinusNPCRank: "The difference in rank between the actor and #objectName# is #operator# #value#"
+types.requirementType.CustomScale: "Scale of the object is #operator# #value#"
+types.requirementType.PlayerCorprus: "The player has#notContr# corprus"
+types.requirementType.CustomCellChanged: "After the player has#notContr# changed location"
+types.requirementType.PlayerExpelledFromNPCFaction: "The player has been expelled from the NPC's faction"
+types.requirementType.NPCHello: "#objectName# \"hello\" stat is #operator# #value#"
+types.requirementType.NPCAlarm: "#objectName# \"alarm\" stat is #operator# #value#"
+types.requirementType.NPCFlee: "#objectName# \"flee\" stat is #operator# #value#"
+types.requirementType.CustomOnActivate: "You do#notContr# activate the object"
+types.requirementType.CustomOnMurder: "You did#notContr# kill the actor and you were seen"
+types.requirementType.CustomOnKnockout: "#objectName# is#notContr# knocked out"
+types.requirementType.NotActorFaction: "The NPC's faction is#negNotContr# #operator# #varName#"
+types.requirementType.CustomRace: "Race of #objectName# is#notContr# \"#varName#\""
+types.requirementType.CustomPos: "#variable# position of the object is #operator# #value#"
+types.requirementType.CustomInterior: "The player is#notContr# in an interior cell"
+types.requirementType.CustomSpell: "#varNameOrTheActor# has#notContr# \"#varName#\" spell"
+types.requirementType.CustomLocked: "The object is#notContr# locked"
+types.requirementType.CustomScriptRunning: "\"#variable#\" script is#notContr# running"
+types.requirementType.CustomGameHour: "Time of day is #operator# #value#"
+types.requirementType.CustomWeaponType: "A weapon with the type of #weaponType# is#notContr# used by #objectName#"
+types.requirementType.PlayerCommonDisease: "The player is#notContr# sick with a common disease"
+types.requirementType.CustomHasSoulgem: "The player has #operator# #value# soulgem(s) containing soul of #varName#"
+types.requirementType.CustomStandingPC: "Someone is#notContr# standing on #objectName# (#object#)"
+types.requirementType.CustomEffect: "#magicEffect# effect is#notContr# affecting #varNameOrTheActor#"
+types.requirementType.CustomLineOfSight: "The object is#notContr# in line-of-sight to #varName#"
+types.requirementType.NPCLevel: "Level of #objectName# is #operator# #value#"
+types.requirementType.CustomOnDeath: "#varNameOrTheActor# is#notContr# killed"
+types.requirementType.CustomOnPCHitMe: "The actor is#notContr# alarmed by a crime"
+types.requirementType.CustomTarget: "#varName# is#notContr# in focus for #varNameOrTheActor#"
+types.requirementType.NotActorClass: "The NPC's class is#notContr# #classVar#"
+types.requirementType.CustomCommonDisease: "#varNameOrTheActor# is#notContr# sick with a common disease"
+types.requirementType.PlayerCrimeLevel: "The current crime level of the player is #operator# #value#"
+types.requirementType.CustomOnPCEquip: "The player equipped an item with \"#script#\" script"
+types.requirementType.CustomPCCell: "The player is#notContr# in #varName#"
+types.requirementType.CustomSayDone: "#varNameOrTheActor# is#negNotContr# saying anything"
+types.requirementType.NotActorCell: "#varNameOrTheActor# is#negNotContr# in #varName#"
+types.requirementType.CustomHasItemEquipped: "#varNameOrTheActor# has#notContr# #varName# item equipped"
+types.requirementType.CustomHealth: "Health of #varNameOrTheActor# is #operator# #value#"
+types.requirementType.CustomSoundPlaying: "\"#variable#\" sound is#notContr# playing"
+types.requirementType.CustomScript: "\"#variable#\" script attached to #scriptObjects#"
+SCR1: "Objects that this script contains: #objectsInScript#"
+types.requirementType.CustomDay: "The date is #operator# #value#"
+types.requirementType.CustomMonth: "The month is #operator# #value#"
+types.requirementType.CustomYear: "The year is #operator# #value#"
+types.requirementType.CustomMenuMode: "The game is#notContr# in menu mode"
+types.requirementType.CustomRandom: "Random number is #operator# #value#"
+types.requirementType.CustomAngle: "#variable# angle of #objectName# (\"#object#\") is #operator# #value#"
+types.requirementType.CustomVampClan: "Player's vampire clan is #operator# #vampClanVal#"
+types.requirementType.Weather: "Weather is #operator# #weatherIdVal#"
+types.requirementType.CustomSpellReadied: "A spell is#notContr# readied for #varNameOrTheActor#"
+types.requirementType.CustomPCWerewolf: "The player is#notContr# werewolf"
+types.requirementType.PlayerWerewolfKills: "The player werewolf kill count is #operator# #value#"
+types.requirementType.CustomWindSpeed: "Wind speed is #operator# #value#"
+types.requirementType.CustomPCSneaking: "The player is#notContr# sneaking"
+types.requirementType.PlayerHealthPercent: "The player's health fraction is #operator# #value#"
+types.requirementType.NPCHealthPercent: " #varNameOrTheActor#'s health fraction is #operator# #value#"
+types.requirementType.CustomHitOnMe: "#objectName# was hit by \"#varName#\""
+types.requirementType.CustomPCInJail: "The player is#notContr# in jail"
+types.requirementType.NPCIsWerewolf: "#objectName# is#notContr# werewolf"
+types.requirementType.NPCFight: "#objectName# \"fight\" stat is #operator# #value#"
+types.requirementType.CustomForceSneak: "#objectName# is#notContr# sneaking"
+types.requirementType.CustomParalysis: "#objectName# is#notContr# paralyzed"
+types.requirementType.CustomInvisible: "#objectName# is#notContr# invisible"
+types.requirementType.CustomChameleon: "#objectName# chameleon value is #operator# #value#"
+types.requirementType.CustomPCRace: "Race of the player is#notContr# #raceByIntValue#" 
+DIAO: "The object \"#objectName#\" (#object#) can be obtained via the \"#dialogueVariable#\" dialog"
+DIAP: "The dialogue \"#dialogueVariable#\" can be obtained via the \"#dialogueValue#\" dialog"
