add text height multiplier settings

--- a/l10n/quest_guider_lite/en.yaml
+++ b/l10n/quest_guider_lite/en.yaml
@@ -69,6 +69,11 @@ cellsAway: |-
     other {{count} cells away}
   }
 startedTracking: "Started tracking"
+textHeightMulJournal: "Text height multiplier (for journal records)"
+textHeightMul: "Text height multiplier"
+textHeightMulDescription: |-
+  This constant is used to estimate the height of text elements based on their font size. OpenMW does not provide a way to retrieve the actual size of text elements, so an approximate height is calculated using this multiplier.
+  Lower values may cause text to be clipped. Higher values can result in excessive spacing between UI components.
 
 true_l: "true"
 false_l: "false"
