--- a/l10n/quest_guider_lite/en.yaml
+++ b/l10n/quest_guider_lite/en.yaml
@@ -59,7 +59,7 @@ show: "Show"
 hide: "Hide"
 track: "Track"
 untrack: "Untrack"
-removeTracking: "Remove tracking"
+removeTracking: "Untrack objects"
 trackObjects: "Track objects"
 starts: "Starts"
 quest: "Quest"
